<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.BizumFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_bizum"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:tint="#33B5E5" />

    <TextView
        android:id="@+id/textViewMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bal_layout"
        android:textSize="24sp"
        android:layout_marginTop="140dp"
        android:textColor="@color/green"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/textview_bizum_envia"
        android:textSize="20dp"
        android:layout_marginTop="200dp" />

    <Spinner
        android:id="@+id/spinnerUsers"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="230dp" />

    <EditText
        android:id="@+id/editTextBizumMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_gravity="center_horizontal"
        android:text="@string/_0"
        android:layout_marginTop="300dp"
        android:enabled="false" />

    <Button
        android:id="@+id/buttonBizum"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/enviar_bizum"
        android:layout_marginTop="350dp"
        android:enabled="false" />
</FrameLayout>